--- a/scs_website-main/index.html
+++ b/scs_website-main/index.html
@@ -68,7 +68,7 @@
             <div id="spacer2"></div>
         </secion>
 
-        <section class="contact-us-section">
+        <section id="contact-us-section">
             <div id="contact-us-now">
                 <h1 id="contact-us-text">
                     Contact Us
