--- a/events.html
+++ b/events.html
@@ -72,6 +72,7 @@
 
     <div class="event_title">
         <h1 class="scs_h1"><span class="scs_span">SCS</span> Events</h1>
+        <p>Here's a glimpse of what you can expect from our upcoming events:</p>
     </div>
 
     <div class="events_content">
