--- a/events.html
+++ b/events.html
@@ -71,8 +71,16 @@
     </nav>
 
     <div class="event_title">
-        <h1 class="scs_h1"><span class="scs_span">SCS</span> Events</h1>
-        <p>Here's a glimpse of what you can expect from our upcoming events:</p>
+        <svg onclick="handleLeft()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="view_pic">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+        </svg>
+        <div class="event_holder">
+            <h1 class="scs_h1"><span class="scs_span">SCS</span> Events</h1>
+            <p>Here's a glimpse of what you can expect from our upcoming events:</p>
+        </div>
+        <svg onclick="handleRight()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="view_pic">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+        </svg>          
     </div>
 
     <div class="events_content">
